terraform/network.tf
resource "aws_vpc" "devops_vpc" {

  cidr_block = "10.0.0.0/16"

  enable_dns_support = true
  enable_dns_hostnames = true


  tags = {
    Name = "devops-vpc"
  }
}



resource "aws_subnet" "public_subnet" {

  vpc_id = aws_vpc.devops_vpc.id

  cidr_block = "10.0.1.0/24"

  map_public_ip_on_launch = true


  tags = {

    Name = "public-subnet"

  }
}



resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.devops_vpc.id


  tags = {

    Name = "devops-igw"

  }
}



resource "aws_route_table" "public_rt" {


  vpc_id = aws_vpc.devops_vpc.id


  route {


    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }


  tags = {

    Name = "public-route"

  }

}



resource "aws_route_table_association" "public_assoc" {


  subnet_id = aws_subnet.public_subnet.id


  route_table_id = aws_route_table.public_rt.id

}
